# Reinforcement-Learning-JunQi

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md  Test.py  Train.py  download.py  player_glm_full_ReCon.py  player_llama3-8b.py  player_local_model.py  requirements.txt  百度贴吧__孙笑川吧.csv
Avalon/: RL_agent.py  avalon_game.py  game.py  player.py  train.py
Lab01/: CMakeLists.txt  Game.cpp  Game.h  Main.cpp
Lab02/: Actor.cpp  Actor.h  Asteroid.cpp  Asteroid.h  CMakeLists.txt  Core.cpp  Game.cpp  Game.h  Laser.cpp  Laser.h  Main.cpp  MoveComponent.cpp  Ship.cpp  Ship.h
Lab03/: CMakeLists.txt  CollisionComponent.cpp  DeadFrog.cpp  DeadFrog.h  Frog.cpp  Frog.h  Game.cpp  Game.h  Log.cpp  Log.h  Main.cpp  SpriteComponent.cpp  Vehicle.cpp  Vehicle.h  WrappingMove.cpp  WrappingMove.h
Lab04/: Actor.cpp  AnimatedSprite.h  Block.cpp  Block.h  CMakeLists.txt  Component.h  Game.cpp  Game.h  Goomba.cpp  Goomba.h  GoombaMove.cpp  GoombaMove.h  MoveComponent.h  Player.cpp  Player.h  PlayerMove.cpp  PlayerMove.h  Random.h  Spawner.cpp  Spawner.h  SpriteComponent.cpp
Lab05/: AnimatedSprite.cpp  CMakeLists.txt  Component.cpp  Game.cpp  Game.h  Ghost.cpp  Ghost.h  GhostAI.cpp  GhostAI.h  MoveComponent.cpp  PacMan.cpp  PacMan.h  PacManMove.cpp  PacManMove.h  PathNode.cpp  PathNode.h  Pellet.cpp  Pellet.h  PowerPellet.cpp  PowerPellet.h  SpriteComponent.cpp  SpriteComponent.h
Lab06/: Actor.cpp  Actor.h  AnimatedSprite.cpp  AnimatedSprite.h  AudioSystem.cpp  AudioSystem.h  Bush.cpp  Bush.h  CMakeLists.txt  CSVHelper.h  Collider.cpp  Collider.h  CollisionComponent.h  Effect.cpp  Effect.h  EnemyComponent.cpp  EnemyComponent.h  Game.cpp  Game.h  PathFinder.cpp  PathFinder.h  PathNode.cpp  PathNode.h  Player.cpp  Player.h  PlayerMove.cpp  PlayerMove.h  Random.cpp  Soldier.cpp  Soldier.h  SoldierAI.cpp  SoldierAI.h  SpriteComponent.cpp  SpriteComponent.h  Sword.cpp  Sword.h  TiledBGComponent.cpp  TiledBGComponent.h
Lab06/Assets/Map/: Objects.csv  ObjectsOneSoldier.csv  Paths.csv  Tiles.csv
Lab06/Assets/Map/Source/: convertmap.py  convertpaths.py  overworld.json  overworld.tmx  tileset.json  tileset.tsx
Lab07/: Actor.cpp  Actor.h  Block.cpp  Block.h  Bullet.cpp  Bullet.h  CMakeLists.txt  CollisionComponent.cpp  Game.cpp  Game.h  HUD.cpp  HUD.h  Mesh.h  MeshComponent.cpp  MoveComponent.cpp  Player.cpp  Player.h  PlayerMove.cpp  PlayerMove.h  Shader.cpp  SideBlock.cpp  SideBlock.h  Texture.cpp
Lab08/: AudioSystem.cpp  CMakeLists.txt  CameraComponent.cpp  CameraComponent.h  CollisionComponent.h  Enemy.cpp  Enemy.h  EnemyMove.cpp  EnemyMove.h  Game.cpp  Game.h  HeightMap.cpp  HeightMap.h  Math.cpp  Mesh.cpp  MeshComponent.h  Player.cpp  Player.h  PlayerMove.cpp  PlayerMove.h  PlayerUI.cpp  PlayerUI.h  Renderer.cpp  Renderer.h  Shader.h  VehicleMove.cpp  VehicleMove.h  VertexArray.cpp
Lab09/: Actor.cpp  AudioSystem.h  Block.h  CMakeLists.txt  CollisionComponent.h  Crosshair.cpp  Font.cpp  Font.h  Game.cpp  Game.h  InputReplay.h  LevelLoader.cpp  MeshComponent.cpp  Player.cpp  Player.h  PlayerMove.cpp  PlayerMove.h  Portal.cpp  Portal.h  PortalMeshComponent.h  Prop.cpp  Renderer.cpp  Renderer.h  SegmentCast.h
Lab10/: Actor.cpp  Actor.h  CMakeLists.txt  Crosshair.h  Door.cpp  Door.h  EnergyCube.cpp  EnergyCube.h  EnergyGlass.h  EnergyLauncher.h  Game.cpp  Game.h  InputReplay.cpp  LevelLoader.cpp  LevelLoader.h  Math.h  Pellet.cpp  Pellet.h  Player.cpp  PlayerMesh.h  PlayerMove.cpp  PlayerMove.h  Portal.cpp  Portal.h  PortalGun.cpp  Texture.h  UIComponent.cpp
Lab11/: Actor.cpp  Actor.h  Block.h  CMakeLists.txt  CollisionComponent.cpp  Door.cpp  Door.h  EnergyCatcher.cpp  EnergyCatcher.h  EnergyCube.h  EnergyGlass.cpp  EnergyGlass.h  EnergyLauncher.cpp  EnergyLauncher.h  Game.cpp  Game.h  HealthComponent.h  LaserComponent.h  LevelLoader.cpp  Main.cpp  MoveComponent.h  Pellet.cpp  Pellet.h  Player.cpp  Player.h  PlayerMesh.cpp  PlayerMesh.h  PlayerMove.cpp  Portal.cpp  PortalGun.h  PortalMeshComponent.cpp  Prop.h  Renderer.cpp  Renderer.h  SegmentCast.cpp  Shader.h  TurretBase.cpp  TurretBase.h  TurretHead.cpp  TurretHead.h  (+2 more)
Lab12/: Actor.cpp  AudioSystem.cpp  AudioSystem.h  Block.cpp  CMakeLists.txt  CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  Door.cpp  Door.h  EnergyCatcher.cpp  EnergyCatcher.h  EnergyLauncher.cpp  Game.cpp  Game.h  HUD.cpp  HUD.h  HealthComponent.cpp  LaserComponent.cpp  LevelLoader.cpp  MeshComponent.h  MoveComponent.cpp  Pellet.cpp  Pellet.h  Player.cpp  Player.h  PlayerMove.cpp  PlayerMove.h  Prop.h  Shader.cpp  TurretBase.cpp  TurretBase.h  TurretHead.cpp  TurretHead.h  VOTrigger.cpp  VOTrigger.h
Scripts/: buildMac.sh  buildWin.sh  checkbuildlist.py  diagnostics-clang-format.py  diagnostics-clang-tidy.py  diagnostics-mac.py  diagnostics-win.py  mac-clang-format.sh  mac-package.sh  run-clang-format.bat  tests.sh  win-package.bat
backup/: avalon_game_backup.py
llama-微调/: player.py
军棋/: demo.py  demo_game.py  dqn_agent_game.py  dqn_agent_infer.py  dqn_complex.py  game.py  game_agent.py  infer_agent.py  junqi_env_game.py  junqi_env_game_model.py  junqi_env_infer.py  junqi_env_setup.py  pieces.py  reward_model_game.py  (+3 more)
(+130 files in other folders)
